--- a/Single Thread/Utils/Parser/Parser/Data/mygame.ini
+++ b/Single Thread/Utils/Parser/Parser/Data/mygame.ini
@@ -1,8 +1,3 @@
-[Bethesda.net]
-uPersistentUuidData0=4037084090
-uPersistentUuidData1=530271372
-uPersistentUuidData2=3214358695
-uPersistentUuidData3=3553998217
 [Clouds]
 fCloudLevel0Distance=16384.0000
 fCloudLevel1Distance=32768.0000
@@ -23,5 +18,5 @@ bUseWaterDisplacements=1
 bUseWaterReflections=1
 bUseWaterRefractions=1
 
-[String]
-sStringTest="한글!"
+[koreanString]
+szStringTest="한글!"
