--- a/Single Thread/Utils/Parser/Parser/Data/mygame.ini
+++ b/Single Thread/Utils/Parser/Parser/Data/mygame.ini
@@ -2,13 +2,13 @@
 fCloudLevel0Distance=16384.0000
 fCloudLevel1Distance=32768.0000
 fCloudLevel2Distance=262144.0000
-fCloudNearFadeDistance=9000.0000
+fCloudNearFadeDistance=9000.0808
 
 [Controls]
 bAlwaysRunByDefault=1
 bGamePadRumble=1
 bInvertYValues=0
-bUseKinect=0
+bUseKinect=1
 fGamepadHeadingSensitivity=0.6667
 fMouseHeadingSensitivity=0.0153
 
@@ -18,5 +18,5 @@ bUseWaterDisplacements=1
 bUseWaterReflections=1
 bUseWaterRefractions=1
 
-[koreanString]
+[KoreanString]
 szStringTest="한글!"
