--- a/Single Thread/Pathfinding Algorithm/Jump Point Search/Visual Astar/Visual Astar.vcxproj.filters
+++ b/Single Thread/Pathfinding Algorithm/Jump Point Search/Visual Astar/Visual Astar.vcxproj.filters
@@ -16,7 +16,7 @@
     <Filter Include="Utils">
       <UniqueIdentifier>{47c40e61-8927-430a-9426-5d15c54414d1}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Class">
+    <Filter Include="Header Files\Class">
       <UniqueIdentifier>{e2efde96-0c55-4e41-9539-fcbea08e1f16}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -34,16 +34,16 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CList.h">
-      <Filter>Class</Filter>
+      <Filter>Header Files\Class</Filter>
     </ClInclude>
     <ClInclude Include="CMemory.h">
-      <Filter>Class</Filter>
+      <Filter>Header Files\Class</Filter>
     </ClInclude>
     <ClInclude Include="CMemoryPool.h">
-      <Filter>Class</Filter>
+      <Filter>Header Files\Class</Filter>
     </ClInclude>
     <ClInclude Include="CPriorityQueue.h">
-      <Filter>Class</Filter>
+      <Filter>Header Files\Class</Filter>
     </ClInclude>
     <ClInclude Include="DrawMap.h">
       <Filter>Utils</Filter>
@@ -52,22 +52,22 @@
       <Filter>Utils</Filter>
     </ClInclude>
     <ClInclude Include="CFramework.h">
-      <Filter>Class</Filter>
+      <Filter>Header Files\Class</Filter>
     </ClInclude>
     <ClInclude Include="Profiler.h">
       <Filter>Utils</Filter>
     </ClInclude>
     <ClInclude Include="CAstar.h">
-      <Filter>Class</Filter>
+      <Filter>Header Files\Class</Filter>
     </ClInclude>
     <ClInclude Include="CJumpPoint.h">
-      <Filter>Class</Filter>
+      <Filter>Header Files\Class</Filter>
     </ClInclude>
     <ClInclude Include="CMapGenerator.h">
-      <Filter>Class</Filter>
+      <Filter>Header Files\Class</Filter>
     </ClInclude>
     <ClInclude Include="CCorrection.h">
-      <Filter>Class</Filter>
+      <Filter>Header Files\Class</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -75,19 +75,19 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CMemory.cpp">
-      <Filter>Class</Filter>
+      <Filter>Header Files\Class</Filter>
     </ClCompile>
     <ClCompile Include="CMemoryPool.cpp">
-      <Filter>Class</Filter>
+      <Filter>Header Files\Class</Filter>
     </ClCompile>
     <ClCompile Include="CPriorityQueue.cpp">
-      <Filter>Class</Filter>
+      <Filter>Header Files\Class</Filter>
     </ClCompile>
     <ClCompile Include="DrawMap.cpp">
       <Filter>Utils</Filter>
     </ClCompile>
     <ClCompile Include="CFramework.cpp">
-      <Filter>Class</Filter>
+      <Filter>Header Files\Class</Filter>
     </ClCompile>
     <ClCompile Include="Global.cpp">
       <Filter>Utils</Filter>
@@ -96,16 +96,16 @@
       <Filter>Utils</Filter>
     </ClCompile>
     <ClCompile Include="CAstar.cpp">
-      <Filter>Class</Filter>
+      <Filter>Header Files\Class</Filter>
     </ClCompile>
     <ClCompile Include="CJumpPoint.cpp">
-      <Filter>Class</Filter>
+      <Filter>Header Files\Class</Filter>
     </ClCompile>
     <ClCompile Include="CMapGenerator.cpp">
-      <Filter>Class</Filter>
+      <Filter>Header Files\Class</Filter>
     </ClCompile>
     <ClCompile Include="CCorrection.cpp">
-      <Filter>Class</Filter>
+      <Filter>Header Files\Class</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
